--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/reactstrap/4.8.0/reactstrap.min.js'></script>
-    <title>React App</title>
+    <title>Ideation Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
